Means and variances plot

--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,7 @@ results/Lower.csv
 results/STU.csv
 results/Upper.csv
 data/MS96_noA.dta
+data/MS96_noA_recalls.dta
+data/MSnoA0207.dta
+data/MSnoA0813.dta
+data/MSnoA0813_append.dta
